# gaiaeyes-backend

./: .env  .env.example  .gitignore  AGENTS.md  CONSTITUTION.md  CONTRIBUTING.md  ChatBotMasterTemplate.txt  Dockerfile  README.md  REQUIRED_SECRETS.md  app.py  env.example  gaia_guide_constants.py  gaia_rules.yaml  gitignore  main.py  render-crons.yaml  requirements.txt  users.json
api/: middleware.py  webhooks.py
app/: cache.py  db.py  main.py  models.py
bots/: README.md  internal_agent_guide.txt  local_health_poll.py
bots/schumann/: cumiana_extractor.py  pyproject.toml  requirements.txt  rotate_history.py  schumann_multi.py  schumann_run.sh  share_crop.py  tomsk_extractor.py  tomsk_sos70_params_extractor.py  validate_feed.py
data/: zip_centroids.csv
docs/: 30_day_roadmap.md  ARCHITECTURE.md  BACKEND.md  CAMERA_HEALTH_CHECK.md  CODEX_CHANGELOG.md  CODEX_TASK_HOME_FEED_CONTENT_SEED.md  DASHBOARD_GAUGES.md  DEPLOY_RENDER.md  DIAG_FEATURES.md  EARTHSCOPE_META_POSTING.md  ENVIRONMENT_VARIABLES.md  FEATURES_ROUTE.md  GAIA_EYES_CODEX_MASTER_GUIDE.md  GITHUB_ACTIONS.md  IOS_APP.md  IOS_NAVIGATION_SHELL.md  Internal-agent-guide.md  MART_REFRESH.md  NEW_AGENT_GUIDE.md  OPEN_QUESTIONS.md  OPERATIONS.md  PATTERN_ENGINE.md  POST_LAUNCH_1_0_1_RELIABILITY_PLAN.md  POST_LAUNCH_RUNBOOK.md  PUBLIC_DAILY_SIGNAL_REPORT.md  README.md  RENDER_CRON_INGESTION.md  SCHUMANN_UI.md  SCHUMANN_UX_MERGED.md  SCRIPTS_GUIDE.md  SOCIAL_ALERTS_ASSET_BOOTSTRAP_PACK.md  SOCIAL_SHARE_IMAGE_GUIDE.md  SUPABASE.md  TOMSK_EXTRACTOR_SCORING.md  TOMSK_PARAMS_INTEGRATION.md  TOMSK_SOS70_PARAMS.md  (+10 more)
(+638 files in other folders)
